--- a/resources/assets/less/bem/bbcode-size-select.less
+++ b/resources/assets/less/bem/bbcode-size-select.less
@@ -18,17 +18,18 @@
 
 .bbcode-size-select {
   .default-box-shadow();
-  .default-border-radius();
   .center-content();
 
-  background-color: #fff;
-  color: @text-color;
+  background-color: @osu-colour-b2;
+  color: @osu-colour-c1;
   text-transform: none;
   text-shadow: none;
   font-size: @font-size--normal;
+  font-weight: normal;
   padding: 5px 10px;
   margin: 2px;
   height: @btn-circle-diameter;
+  border-radius: 10000px;
 
   &__label {
     margin-right: 10px;
@@ -42,5 +43,6 @@
     left: 0;
     opacity: 0;
     cursor: pointer;
+    color: initial;
   }
 }
