--- a/resources/assets/less/bem/forum-list.less
+++ b/resources/assets/less/bem/forum-list.less
@@ -17,12 +17,9 @@
  */
 
 .forum-list {
-  padding: @padding-base;
-
-  @media @desktop {
-    padding-left: @padding-base-desktop;
-    padding-right: @padding-base-desktop;
-  }
+  padding-top: 10px;
+  padding-bottom: 10px;
+  .default-gutter-v2();
 
   &__button {
     flex: none;
