--- a/resources/assets/less/bem/forum-post-actions.less
+++ b/resources/assets/less/bem/forum-post-actions.less
@@ -18,28 +18,13 @@
 
 .forum-post-actions {
   display: flex;
-  margin-left: -5px;
-  margin-right: -5px;
-
-  @media @desktop {
-    flex-direction: column;
-    margin-left: 0;
-    margin-right: 0;
-  }
+  margin: -5px;
 
   .osu-page-header--wiki & {
     flex-direction: column;
   }
 
   &__action {
-    margin: 0 5px;
-
-    .osu-page-header--wiki & {
-      margin: 5px 5px;
-    }
-
-    @media @desktop {
-      margin: 5px 0;
-    }
+    margin: 5px;
   }
 }
