--- a/resources/assets/less/bem/forum-post-content.less
+++ b/resources/assets/less/bem/forum-post-content.less
@@ -21,6 +21,7 @@
   @_font-size: @font-size--normal-2;
   font-size: @_font-size;
   word-wrap: break-word;
+  color: @osu-colour-c1;
 
   &--edit {
     .reset-input();
