--- a/resources/assets/less/bem/forum-title.less
+++ b/resources/assets/less/bem/forum-title.less
@@ -40,10 +40,10 @@
   }
 
   &--forum {
-    margin: @padding-base;
+    margin: @gutter-v2;
 
     @media @desktop {
-      margin: 20px @padding-base-desktop;
+      margin: 20px @gutter-v2-desktop;
     }
   }
 
