--- a/resources/assets/less/forum/post-box.less
+++ b/resources/assets/less/forum/post-box.less
@@ -21,4 +21,9 @@
   display: flex;
   flex-wrap: wrap;
   margin: -2px;
+  justify-content: center;
+
+  @media @desktop {
+    justify-content: flex-start;
+  }
 }
