--- a/resources/assets/less/bem/navbar-mobile.less
+++ b/resources/assets/less/bem/navbar-mobile.less
@@ -75,7 +75,7 @@
     max-height: calc((var(--vh, 1vh) * 100) - @navbar-height);
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
-    z-index: @z-index--nav2;
+    z-index: @z-index--nav-bar;
 
     &:focus,
     &:hover,
