--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -136,24 +136,30 @@
 @import "bem/form";
 @import "bem/forum-category-header";
 @import "bem/forum-cover-admin-item";
+@import "bem/forum-cover-edit";
 @import "bem/forum-issue-icon";
 @import "bem/forum-item";
 @import "bem/forum-item-stripe";
 @import "bem/forum-list";
 @import "bem/forum-poll";
+@import "bem/forum-poll-container";
+@import "bem/forum-poll-option";
 @import "bem/forum-poll-row";
 @import "bem/forum-post";
 @import "bem/forum-post-actions";
 @import "bem/forum-post-content";
+@import "bem/forum-post-edit";
+@import "bem/forum-post-info";
+@import "bem/forum-post-preview";
 @import "bem/forum-title";
 @import "bem/forum-topic-entry";
 @import "bem/forum-topic-feature-vote";
 @import "bem/forum-topic-floating-header";
-@import "bem/forum-topic-header";
 @import "bem/forum-topic-header-padding";
 @import "bem/forum-topic-nav";
-@import "bem/forum-topic-reply";
 @import "bem/forum-topic-title";
+@import "bem/forum-topic-toolbar";
+@import "bem/forum-user-badge";
 @import "bem/fragment-target";
 @import "bem/gallery-previews";
 @import "bem/gallery-thumbnails";
