--- a/resources/assets/less/bem/avatar.less
+++ b/resources/assets/less/bem/avatar.less
@@ -46,13 +46,12 @@
   }
 
   &--forum {
-    @border: 5px;
     width: 100%;
     height: 0;
-    padding-bottom: calc(100% - (@border * 2));
+    padding-bottom: 100%;
+    border-radius: 20px;
 
     box-shadow: none;
-    border: @border solid #fff;
   }
 
   &--forum-reply {
