--- a/resources/assets/less/bem/forum-post.less
+++ b/resources/assets/less/bem/forum-post.less
@@ -18,11 +18,9 @@
 
 .forum-post {
   @_top: forum-post;
+  @_padding-content: 20px;
 
-  .default-box-shadow();
-  background-color: #fff;
-
-  margin-bottom: 5px;
+  border-bottom: 1px solid @osu-colour-b1;
   padding: 0;
 
   display: flex;
@@ -38,56 +36,48 @@
     box-shadow: none;
   }
 
-  .js-forum-post--hidden & {
+  &.js-forum-post--hidden {
     opacity: 0.5;
   }
 
-  .js-forum-post--highlighted & {
-    outline: 3px solid @blue-darker;
-  }
-
-  //TODO: remove after forum restyle
-  a {
-    .link-old();
+  &.js-forum-post--highlighted {
+    background-color: @osu-colour-b3;
   }
 
   &__actions {
-    .desktop-position() {
-      @media @desktop {
-        justify-content: flex-start;
-        width: 0;
-        right: 0;
-        top: 20px;
-
-        opacity: 0;
-        will-change: opacity;
-
-        .forum-post:hover & {
-          opacity: 1;
-        }
-      }
-    }
-
     position: absolute;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     transition: opacity 120ms ease-in-out;
+    will-change: opacity;
 
-    right: 30px;
-    bottom: 20px;
-    .desktop-position();
+    right: @gutter-v2;
+    top: (@_padding-content - 10px);
+
+    @media @desktop {
+      right: @gutter-v2-desktop;
+      opacity: 0;
+    }
+
+    .@{_top}:hover & {
+      @media @desktop {
+        opacity: 1;
+      }
+    }
+  }
+
+  &__avatar {
+    width: 100%;
+    padding: 0 50px;
   }
 
   &__body {
     flex: none;
+    display: flex;
+    flex-direction: column;
+
     @media @desktop {
       flex: 1;
     }
-
-    display: flex;
-    flex-direction: column;
 
     // to prevent child from overflowing
     // reference: https://bugzilla.mozilla.org/show_bug.cgi?id=1108514#c2
@@ -101,96 +91,39 @@
   }
 
   &__content {
-    font-size: 12px;
+    font-size: @font-size--normal;
     flex: none;
+    padding: 0 @gutter-v2 @_padding-content @_padding-content;
 
-    padding: 20px 30px;
-    overflow: hidden;
-
-    .@{_top}__preview & {
-      @media @mobile {
-        padding-left: 0;
-        padding-right: 0;
-      }
-    }
-
-    &--edit-bar {
-      background-color: @gray-lighter;
-      display: flex;
-      justify-content: flex-end;
-      padding-top: 10px;
-      padding-bottom: 10px;
-    }
-
-    &--edit-bar-create {
-      background-color: #444;
-    }
-
-    &--edit-body {
-      flex: 1 0 auto;
-      display: flex;
+    @media @desktop {
+      padding-right: @gutter-v2-desktop;
     }
 
     &--footer {
-      order: 2;
-      font-weight: bold;
-      color: #777;
-
-      padding-top: 0;
-      padding-bottom: 20px;
-      @media @desktop {
-        order: 0;
-        padding-top: 20px;
-      }
+      color: @osu-colour-c2;
     }
 
     &--header {
-      font-weight: bold;
-      order: 1;
-
-      padding-top: 0;
-
-      .@{_top}__preview & {
-        text-transform: uppercase;
-      }
-
-      @media @desktop {
-        order: 0;
-        padding-top: 20px;
-        padding-bottom: 0;
-      }
+      padding-top: @_padding-content;
     }
 
     &--main {
       flex: 1 0 auto;
-      order: 0;
-
-      padding-top: 20px;
-      padding-bottom: 20px;
-    }
-
-    &--poll-create {
-      background-color: #555;
-      color: #fff;
-    }
-
-    &--reply-tabs {
-      background-color: @gray-lighter;
-      display:flex;
-      padding-top: 0;
-      padding-bottom: 0;
     }
 
     &--signature {
-      background-color: @light-gray;
-      border-top: 1px solid #eee;
+      border-top: 1px solid @osu-colour-b1;
 
-      padding-top: 20px;
-      padding-bottom: 20px;
+      padding: 10px 0 0;
+      margin: 0 @gutter-v2 @_padding-content @_padding-content;
+      color: @osu-colour-c2;
+      display: none;
+      max-height: 170px;
+      overflow: hidden;
 
-      .bbcode {
-        max-height: 150px;
-        overflow: hidden;
+      @media @desktop {
+        display: block;
+        margin-right: @gutter-v2-desktop;
       }
     }
   }
@@ -198,47 +131,6 @@
   &__info-link {
     .link-gray-dark();
     .link-plain();
-  }
-
-  &__info-panel {
-    flex: none;
-    width: 180px;
-    background-color: @user-color-default;
-    display: flex;
-    flex-direction: column;
-
-    &--reply {
-      background-color: transparent;
-    }
-  }
-
-  &__info-panel-extra {
-    background-color: fade(#fff, 90%);
-    display: flex;
-    flex-direction: column;
-    flex: 1 0 auto;
-    padding: 10px;
-    text-align: center;
-  }
-
-  &__info-panel-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 20px;
-    background-image: linear-gradient(to bottom, transparent, fade(#000, 20%));
-
-    &::before {
-      position: absolute;
-      content: ' ';
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background-image: url("/images/backgrounds/button.svg");
-      background-size: 300px;
-      opacity: 0.5;
-    }
   }
 
   &__info-panel-xs {
@@ -277,16 +169,6 @@
 
     &--user-title {
       color: #333;
-    }
-  }
-
-  &__preview {
-    background-color: #ccc;
-
-    @media @mobile {
-      padding: 10px;
-      margin: 0 20px;
-      .default-border-radius;
     }
   }
 
