--- a/resources/assets/less/bem/forum-user-badge.less
+++ b/resources/assets/less/bem/forum-user-badge.less
@@ -16,26 +16,16 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.forum-topic-reply {
-  display: flex;
-  align-items: flex-end;
-  flex: 1 0 auto;
+.forum-user-badge {
+    background-color: @osu-colour-b6;
+    color: @osu-colour-lime-2;
+    font-size: @font-size--small;
+    font-weight: 600;
+    padding: 2px 10px;
+    border-radius: 10000px;
+    text-transform: uppercase;
 
-  &__form {
-    .own-layer();
-    transition: opacity 120ms;
-
-    background-color: #444;
-    width: 100%;
-    padding-bottom: 20px;
-    padding-top: 10px;
-
-    &.js-forum-topic-reply-flash {
-      animation: forum-topic-reply-flash 500ms ease-in-out;
+    &--inline {
+      margin-right: 5px;
     }
-  }
-
-  @keyframes forum-topic-reply-flash {
-    50% { background-color: #777; }
-  }
 }
