--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -62,10 +62,6 @@
 // ┐(ﾟ ヮﾟ)┌
 @padding-wiki-desktop: 40px;
 
-// ┐(ﾟ ヮﾟ)┌
-@padding-base: 10px;
-@padding-base-desktop: 50px;
-
 @gutter-profile-page: 20px;
 @gutter-profile-page-desktop: @gutter-desktop;
 @padding-profile-page: 10px;
@@ -74,6 +70,10 @@
 @gutter: 30px;
 @gutter-desktop: 70px;
 
+// ┐(ﾟ ヮﾟ)┌
+@gutter-v2: 10px;
+@gutter-v2-desktop: 50px;
+
 @height--nav-popup: 210px; // min-height; actual height will be calculated by js.
 
 @navbar-mobile--content-height: @navbar-height - (@navbar-padding-vertical * 2);
@@ -81,8 +81,8 @@
 @border-radius--nav-avatar: 10px;
 @border-radius--extra: 20px;
 
-@forum-item-overflow: @padding-base - 2px;
-@forum-item-overflow-desktop: @padding-base-desktop - 20px;
+@forum-item-overflow: @gutter-v2 - 2px;
+@forum-item-overflow-desktop: @gutter-v2-desktop - 20px;
 @forum-item-background-color: @osu-colour-b4;
 @forum-item-background-color-hover: @osu-colour-b3;
 @forum-item-animate: all 120ms;
@@ -99,17 +99,18 @@
 @z-index--page-header: 1;
 @z-index--tournament-header: 1;
 @z-index--notification-banner-v2: 1;
+@z-index--forum-post-edit-mode: 1;
+@z-index--forum-topic-reply-stick: 1; // inside fixed-bar
 
 @z-index--beatmaps-panel: 4;
 @z-index--profile-page-cover-selector: 5;
 @z-index--profile-previous-usernames: 10;
 @z-index--profile-tournament-banner: 11;
-@z-index--nav2: 100;
 @z-index--simple-menu: 101;
 @z-index--admin-menu: 499;
 @z-index--back-to-top: 500;
-@z-index--fixed-bar: 501;
-@z-index--nav-bar: 502;
+@z-index--nav-bar: 501;
+@z-index--fixed-bar: 502;
 @z-index--user-card-tooltip: 509;
 @z-index--blackout: 510;
 @z-index--blackout-visible: 511;
