Add base empty main page

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -346,6 +346,7 @@
 @import "bem/userinfo-small";
 @import "bem/value-display";
 @import "bem/warning-box";
+@import "bem/wiki-main-page";
 @import "bem/wiki-notice";
 @import "bem/wiki-page";
 @import "bem/wiki-toc";
