--- a/resources/assets/less/bem/osu-page-header.less
+++ b/resources/assets/less/bem/osu-page-header.less
@@ -130,16 +130,26 @@
     .at2x-simple("/images/headers/tournament.jpg");
   }
 
-  &--wiki {
+  .wiki {
     .default-box-shadow();
     .at2x-simple("/images/headers/wiki.jpg");
     height: 125px;
-    padding-bottom: 0;
 
     @media @desktop {
       padding-left: @padding-wiki-desktop;
       padding-right: @padding-wiki-desktop;
     }
+  }
+
+  &--wiki {
+    // less doesn't seem to support mixins named
+    // using parent selectors, so we have to do it this way
+    .wiki;
+  }
+
+  &--wiki-main-page {
+    .wiki;
+    height: 250px;
   }
 
   &__actions {
@@ -276,6 +286,10 @@
       font-size: @font-size--header-description;
     }
 
+    &--icon {
+      font-size: @header-icon-size;
+    }
+
     .@{top}--forum-index & {
       font-style: normal;
       margin: 0;
@@ -306,6 +320,23 @@
       margin-bottom: 0;
       padding-bottom: (@main-padding - @border-height);
       border-bottom: @border-height solid @yellow;
+    }
+
+    .@{top}--wiki-main-page &--main {
+      padding-bottom: 15px;
+      margin: 0;
+      font-size: @font-size--large-3;
+      font-weight: 300;
+      font-style: italic;
+    }
+
+    .@{top}--wiki-main-page &--small {
+      padding-bottom: @main-padding;
+      font-style: normal;
+    }
+
+    .@{top}--wiki-main-page &--icon {
+      padding-bottom: 20px;
     }
   }
 
@@ -342,6 +373,13 @@
       @media @mobile {
         padding-right: 55px;
       }
+    }
+
+    .@{top}--wiki-main-page & {
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
     }
   }
 }
