Full main page renderer

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -347,6 +347,7 @@
 @import "bem/value-display";
 @import "bem/warning-box";
 @import "bem/wiki-main-page";
+@import "bem/wiki-main-page-panel";
 @import "bem/wiki-notice";
 @import "bem/wiki-page";
 @import "bem/wiki-toc";
