--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -34,6 +34,7 @@
 @import "jquery-ui/theme";
 
 @import "functions";
+@import "torus";
 @import "base";
 @import "keyframes";
 @import "layout";
@@ -62,3 +63,4 @@
 
 @fa-font-path: "/vendor/fonts/font-awesome";
 @extra-font-path: "/fonts/extra";
+@torus-font-path: "/fonts/torus";
