--- a/resources/assets/less/layout.less
+++ b/resources/assets/less/layout.less
@@ -31,6 +31,7 @@
 
 :root {
   --font-default: @font-default;
+  --font-default-torus: @font-default-torus;
   --font-default-vi: @font-default-vi;
   --font-default-zh: @font-default-zh;
   --font-default-zh-tw: @font-default-zh-tw;
