--- a/resources/assets/less/bem/account-edit.less
+++ b/resources/assets/less/bem/account-edit.less
@@ -64,7 +64,7 @@
     padding: 20px;
 
     @media @desktop {
-      padding-bottom: 0px;
+      padding-bottom: 0;
       padding-left: 40px;
     }
   }
