--- a/resources/assets/less/bem/beatmap-discussion-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-post.less
@@ -74,8 +74,8 @@
       .reset-input();
       position: absolute;
       color: @osu-colour-f1;
-      top: 0px;
-      right: 0px;
+      top: 0;
+      right: 0;
       width: @beatmap-discussion--reply-padding;
       height: @beatmap-discussion--reply-padding;
     }
