--- a/resources/assets/less/bem/beatmap-score-top.less
+++ b/resources/assets/less/bem/beatmap-score-top.less
@@ -29,7 +29,7 @@
 
   &__avatar {
     flex: none;
-    margin: 0px 10px;
+    margin: 0 10px;
   }
 
   &__position {
@@ -115,7 +115,7 @@
     justify-content: space-around;
 
     @media @desktop {
-      margin: 5px 10px 5px 0px;
+      margin: 5px 10px 5px 0;
       justify-content: flex-end;
     }
 
