--- a/resources/assets/less/bem/beatmapset-activities.less
+++ b/resources/assets/less/bem/beatmapset-activities.less
@@ -36,7 +36,7 @@
     }
 
     &__event-icon-spacer {
-        margin: 0px 10px;
+        margin: 0 10px;
     }
 
     &__post-grow {
@@ -64,7 +64,7 @@
     }
 
     &__vote-icon-spacer {
-        margin: 10px 5px 10px 0px;
+        margin: 10px 5px 10px 0;
     }
 
     &__vote-link {
