--- a/resources/assets/less/bem/beatmapset-favourites.less
+++ b/resources/assets/less/bem/beatmapset-favourites.less
@@ -42,7 +42,7 @@
     display: inline-block;
     width: @avatar-size;
     height: @avatar-size;
-    margin: 0px @avatar-margin;
+    margin: 0 @avatar-margin;
     overflow: hidden;
   }
 
