--- a/resources/assets/less/bem/chat-message-group.less
+++ b/resources/assets/less/bem/chat-message-group.less
@@ -20,7 +20,7 @@
   @top: chat-message-group;
 
   margin: 10px;
-  margin-left: 0px;
+  margin-left: 0;
   margin-right: 120px;
   color: white;
   display: flex;
@@ -35,7 +35,7 @@
 
   &--own {
     margin-left: 120px;
-    margin-right: 0px;
+    margin-right: 0;
     flex-direction: row-reverse;
   }
 
@@ -46,7 +46,6 @@
     flex-direction: column;
     font-size: 10px;
     color: white;
-    text-decoration: italic;
     font-style: italic;
     flex-shrink: 0;
   }
