--- a/resources/assets/less/bem/grid-cell.less
+++ b/resources/assets/less/bem/grid-cell.less
@@ -57,6 +57,6 @@
   // squashes the flex content down to the smallest possible
   // size to let other cells expand and fill the gap.
   &--squash {
-    flex: 0 1 0%;
+    flex: 0 1 0;
   }
 }
