--- a/resources/assets/less/bem/loading-overlay.less
+++ b/resources/assets/less/bem/loading-overlay.less
@@ -82,8 +82,8 @@
       background-color: @colour;
       border-color: @colour;
 
-      left: 0%;
-      top: 0%;
+      left: 0;
+      top: 0;
     }
 
     &--2 {
@@ -103,7 +103,7 @@
       border-color: @colour;
 
       left: 50%;
-      top: 0%;
+      top: 0;
 
       animation-delay: @animation-delay*2;
     }
