--- a/resources/assets/less/bem/mods.less
+++ b/resources/assets/less/bem/mods.less
@@ -43,7 +43,7 @@
   &--scoreboard {
     width: auto;
     height: @mod-height-small;
-    padding: 0px;
+    padding: 0;
     justify-content: flex-start;
   }
 
