--- a/resources/assets/less/bem/page-extra.less
+++ b/resources/assets/less/bem/page-extra.less
@@ -42,8 +42,8 @@
   }
 
   &--userpage {
-    padding-right: 0px;
-    padding-bottom: 0px;
+    padding-right: 0;
+    padding-bottom: 0;
   }
 
   &__actions {
@@ -150,7 +150,7 @@
     font-size: 14px;
     font-style: normal;
     color: white;
-    margin: 20px 0px;
+    margin: 20px 0;
 
     &::before {
       content: ' ';
