--- a/resources/assets/less/bem/ranking-page-table.less
+++ b/resources/assets/less/bem/ranking-page-table.less
@@ -21,7 +21,7 @@
   min-width: 650px;
   white-space: nowrap;
   text-align: center;
-  border-spacing: 0px 3px;
+  border-spacing: 0 3px;
   border-collapse: separate;
 
   &__heading {
@@ -44,7 +44,7 @@
   }
 
   &__column {
-    padding: 6px 0px;
+    padding: 6px 0;
 
     &--dimmed {
       color: @osu-colour-f1;
@@ -52,7 +52,7 @@
 
     &--rank {
       text-align: center;
-      padding: 0px 10px;
+      padding: 0 10px;
       opacity: 1;
     }
 
