--- a/resources/assets/less/bem/support-osu-popup.less
+++ b/resources/assets/less/bem/support-osu-popup.less
@@ -32,8 +32,8 @@
 
   &__close-button {
     position: absolute;
-    top: 0px;
-    right: 0px;
+    top: 0;
+    right: 0;
     .link-gray-555();
     .link-plain();
     font-size: @font-size--support-osu-popup-header-smaller;
