--- a/resources/assets/less/bem/user-session-list-session.less
+++ b/resources/assets/less/bem/user-session-list-session.less
@@ -51,12 +51,12 @@
 
     @media @desktop {
       align-items: center;
-      padding: 0px 5px 10px 5px;
+      padding: 0 5px 10px 5px;
     }
 
     @media @mobile {
       align-items: flex-start;
-      padding: 0px 0px 10px 0px;
+      padding: 0 0 10px 0;
       flex-wrap: wrap;
     }
   }
