--- a/resources/assets/less/bem/beatmapset-panel.less
+++ b/resources/assets/less/bem/beatmapset-panel.less
@@ -217,7 +217,7 @@
     font-size: 14px;
     line-height: 28px;
     background: fade(black, 50%);
-    padding: 0px 5px;
+    padding: 0 5px;
     margin-right: 5px;
     border-radius: 14px;
   }
