--- a/resources/assets/less/bem/beatmapsets-search.less
+++ b/resources/assets/less/bem/beatmapsets-search.less
@@ -28,8 +28,8 @@
 
   &--sticky {
     background-color: transparent;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-shadow: none;
   }
 
