--- a/resources/assets/less/bem/chat-input.less
+++ b/resources/assets/less/bem/chat-input.less
@@ -34,7 +34,7 @@
   @media @mobile {
     position: fixed;
     font-size: 16px;
-    padding: 10px 0px 10px 20px;
+    padding: 10px 0 10px 20px;
   }
 
   &__box {
