--- a/resources/assets/less/bem/news-post-preview.less
+++ b/resources/assets/less/bem/news-post-preview.less
@@ -23,7 +23,7 @@
   margin-bottom: 5px;
 
   &--collapsed {
-    margin-bottom: 0px;
+    margin-bottom: 0;
     box-shadow: none;
   }
 
@@ -60,7 +60,7 @@
       flex-direction: row;
       justify-content: flex-end;
       align-items: baseline;
-      margin: 0px 10px;
+      margin: 0 10px;
       padding: 5px 10px;
     }
   }
@@ -94,11 +94,11 @@
     color: white;
     .link-hover({ color: white });
     font-size: @font-size--title-small;
-    margin: 5px 0px 10px 0px;
+    margin: 5px 0 10px 0;
     font-style: normal;
 
     .@{top}--collapsed & {
-      margin: 0px;
+      margin: 0;
     }
   }
 
