--- a/resources/assets/less/bem/osu-md.less
+++ b/resources/assets/less/bem/osu-md.less
@@ -221,11 +221,11 @@
     background-color: @osu-colour-b6;
     color: @osu-colour-l1;
     border: none;
-    border-radius: 0px;
+    border-radius: 0;
 
     code {
       border: none;
-      padding: 0px;
+      padding: 0;
     }
   }
 }
