rename block class

--- a/resources/assets/less/bem/oauth-client.less
+++ b/resources/assets/less/bem/oauth-client.less
@@ -16,7 +16,7 @@
  *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.authorized-client {
+.oauth-client {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
