Removed duplicates & shorthanded for consistency

--- a/resources/assets/less/bem/beatmap-discussion-vote.less
+++ b/resources/assets/less/bem/beatmap-discussion-vote.less
@@ -25,8 +25,7 @@
   .fade-element(100ms);
 
   min-width: 35px;
-  padding: 10px;
-  padding-top: 5px;
+  padding: 5px 10px 10px;
 
   display: flex;
   flex-direction: column;
