--- a/resources/assets/less/bem/beatmap-discussion.less
+++ b/resources/assets/less/bem/beatmap-discussion.less
@@ -37,8 +37,7 @@
     justify-content: flex-end;
 
     height: @beatmap-discussion--avatar-size;
-    margin: 10px;
-    margin-right: 0;
+    margin: 10px 0 10px 10px;
   }
 
   &__action {
