--- a/resources/assets/less/bem/chat-message-group.less
+++ b/resources/assets/less/bem/chat-message-group.less
@@ -19,9 +19,7 @@
 .chat-message-group {
   @top: chat-message-group;
 
-  margin: 10px;
-  margin-left: 0;
-  margin-right: 120px;
+  margin: 10px 120px 10px 0;
   color: white;
   display: flex;
 
