--- a/resources/assets/less/bem/contest-list-item.less
+++ b/resources/assets/less/bem/contest-list-item.less
@@ -102,8 +102,7 @@
 
   &__left-content {
     float: left;
-    padding: 15px;
-    padding-top: 10px;
+    padding: 10px 15px 15px;
     overflow: hidden;
     @media @mobile {
       padding-right: 0;
