--- a/resources/assets/less/bem/contest-list.less
+++ b/resources/assets/less/bem/contest-list.less
@@ -21,8 +21,7 @@
   color: white;
   font-size: 14px;
   font-weight: 300;
-  padding: 20px;
-  padding-top: 10px;
+  padding: 10px 20px 20px;
   @media @mobile{
    padding: 5px;
   }
