--- a/resources/assets/less/bem/oauth-form.less
+++ b/resources/assets/less/bem/oauth-form.less
@@ -100,7 +100,7 @@
 
   &__logo {
     background-image: url('/images/layout/osu-logo-white.svg');
-    background-position: contain;
+    background-size: contain;
 
     flex: none;
     margin-right: 10px;
