--- a/resources/assets/less/bem/osu-layout.less
+++ b/resources/assets/less/bem/osu-layout.less
@@ -147,8 +147,7 @@
 
     &--forum-post-create {
       ._page;
-      padding: 20px;
-      padding-bottom: 0;
+      padding: 20px 20px 0;
     }
 
     &--full {
@@ -274,8 +273,7 @@
 
     &--page-profile {
       ._page;
-      padding: 0;
-      padding-top: 20px;
+      padding: 20px 0 0;
       margin-bottom: 10px;
     }
 
