--- a/resources/assets/less/bem/osu-page-header-v2.less
+++ b/resources/assets/less/bem/osu-page-header-v2.less
@@ -17,9 +17,11 @@
  */
 
 .osu-page-header-v2 {
-  background: transparent;
+  //background: transparent;
+  //background-size: cover;
+  //background-position: center center;
   background-size: cover;
-  background-position: center center;
+  background: transparent center center;
 
   padding: 20px;
   display: flex;
