--- a/resources/assets/less/bem/osu-page-header.less
+++ b/resources/assets/less/bem/osu-page-header.less
@@ -195,8 +195,7 @@
       flex: none;
       display: flex;
       background-color: fade(#000, 50%);
-      padding: 0;
-      padding-top: 5px;
+      padding: 5px 0 0;
       justify-content: flex-start;
       margin: 0 -10px;
       width: calc(100% + 20px);
