--- a/resources/assets/less/bem/search-result.less
+++ b/resources/assets/less/bem/search-result.less
@@ -21,8 +21,7 @@
   .default-border-radius();
   .thicker-box-shadow();
   background-color: @osu-colour-b4;
-  padding: 10px 20px;
-  padding-right: 0;
+  padding: 10px 0 10px 20px;
   margin-top: 20px;
 
   &::before {
