--- a/resources/assets/less/bem/status-chart.less
+++ b/resources/assets/less/bem/status-chart.less
@@ -31,7 +31,7 @@
     }
 
     &--percentage {
-      font-style: none;
+      font-style: unset; // can be initial, probably.
       fill: @pink-dark;
     }
   }
