--- a/resources/assets/less/bem/status-incidents.less
+++ b/resources/assets/less/bem/status-incidents.less
@@ -23,8 +23,7 @@
   border-bottom: @border;
   border-bottom-color: #E30000;
 
-  padding: 6px 20px;
-  padding-bottom: 0;
+  padding: 6px 20px 0;
 
   &__title {
     padding-top: 5px;
