--- a/resources/assets/less/bem/tournament-list-item.less
+++ b/resources/assets/less/bem/tournament-list-item.less
@@ -53,8 +53,7 @@
     }
 
     &__metadata-left {
-      padding: 15px;
-      padding-top: 10px;
+      padding: 10px 15px 15px;
     }
 
     &__metadata-right {
