--- a/resources/assets/less/bem/tracklist.less
+++ b/resources/assets/less/bem/tracklist.less
@@ -125,9 +125,8 @@
     align-items: center;
 
     &--exclusive {
-      background: linear-gradient(to right, fade(@pink, 50%) 0%, transparent 100%);
       background-size: 42px;
-      background-repeat: repeat-y;
+      background: linear-gradient(to right, fade(@pink, 50%) 0%, transparent 100%) repeat-y;
     }
   }
 
