--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -728,9 +728,8 @@ body {
 }
 .tocify-wrapper .tocify-subheader {
   display: none;
-  background-color: #262626;
   font-weight: 500;
-  background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0) 8px), linear-gradient(to top, rgba(0,0,0,0.2), rgba(0,0,0,0) 8px), linear-gradient(to bottom, #000, rgba(0,0,0,0) 1.5px), linear-gradient(to top, #939393, rgba(147,147,147,0) 1.5px), #262626;
+  background: #262626 linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0) 8px), linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0) 8px), linear-gradient(to bottom, #000, rgba(0, 0, 0, 0) 1.5px), linear-gradient(to top, #939393, rgba(147, 147, 147, 0) 1.5px);
 }
 .tocify-wrapper .tocify-subheader .tocify-item>a {
   padding-left: 25px;
