--- a/resources/assets/less/bem/beatmapsets-search.less
+++ b/resources/assets/less/bem/beatmapsets-search.less
@@ -91,8 +91,8 @@
   &__input {
     border: 1px solid #ccc;
     width: 100%;
-    padding: 10px;
-    padding-right: 10px + @_icon-width + 20px;
+    //padding: 10px;
+    //padding-right: 10px + @_icon-width + 20px;
 
     font-style: italic;
     font-weight: lighter;
@@ -104,8 +104,7 @@
     }
 
     .@{_top}--sticky & {
-      padding: 5px;
-      padding-right: 5px + @_icon-width--sticky + 20px;
+      padding: 5px 5px + @_icon-width--sticky + 20px 5px 5px;
     }
   }
 
