--- a/resources/assets/less/bem/download-page-header.less
+++ b/resources/assets/less/bem/download-page-header.less
@@ -21,8 +21,7 @@
   flex-direction: column;
   align-items: center;
 
-  margin: 20px 0;
-  margin-top: 80px;
+  margin: 80px 0 20px;
 
   @media @desktop {
     margin-left: 90px;
