--- a/resources/assets/less/bem/page-mode.less
+++ b/resources/assets/less/bem/page-mode.less
@@ -34,8 +34,7 @@
 
   @media @mobile {
     font-size: 12px;
-    padding: 0;
-    padding-top: 5px;
+    padding: 5px 0 0;
   }
 
   &--page-extra-tabs {
