--- a/resources/assets/less/bem/status-incident.less
+++ b/resources/assets/less/bem/status-incident.less
@@ -56,9 +56,7 @@
     float: left;
     background: red;
     border-radius: 5px;
-    margin: 10px;
-    margin-left: 0;
-    margin-top: 3px;
+    margin: 3px 10px 10px 0;
 
     &--resolved {
       background: @resolved;
