Fixed mismatch property-name

--- a/resources/assets/less/store/base.less
+++ b/resources/assets/less/store/base.less
@@ -96,7 +96,7 @@
 
   .price {
     color: @pink-text;
-    font-style: bold;
+    font-weight: bold;
     font-size: 30px;
     margin-bottom: 0;
   }
