--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -350,6 +350,8 @@
 @import "bem/wiki-main-page-panel";
 @import "bem/wiki-notice";
 @import "bem/wiki-page";
+@import "bem/wiki-search";
+@import "bem/wiki-search-suggestions";
 @import "bem/wiki-toc";
 @import "bem/wiki-toc-list";
 
