--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -91,6 +91,7 @@
 @z-index--profile-page-cover-selector: 5;
 @z-index--profile-previous-usernames: 10;
 @z-index--profile-tournament-banner: 11;
+@z-index--wiki-search-suggestions: 50;
 @z-index--nav2: 100;
 @z-index--simple-menu: 101;
 @z-index--admin-menu: 499;
@@ -149,6 +150,7 @@
 @font-size--large-3: 40px;
 
 @font-size--wiki: 14px;
+@font-size--wiki-search: 18px;
 
 @font-size--header-title: 32px;
 @font-size--header-title-mobile: 24px;
